@@ -87,7 +87,7 @@ mkdir -p resources
 cat >resources/ReadMe.txt <<EOF
 This package installs OCaml version ${VERSION}.
 You need Mac OS X 10.7.x (Lion), with the
-XCode tools installed (v3.2.6 or later).
+XCode tools installed (v4.3.3 or later).
 
 Files will be installed in the following directories:
 
